# fcmcua

./: LICENSE  README.md  package.xml
Demo/Demo_Cnc/: opcserver.py
Demo/Demo_Cnc/Settings/: fcmcua.ini
Demo/Model/: A_disk.FCStd  A_disk.FCStd1  DemoMill.FCStd  DemoMill.FCStd1  beam.FCStd  bed.FCStd  door_left.FCStd  door_right.FCStd  head.FCStd  sled.FCStd  tool_carrier.FCStd  tower.FCStd
freecad.fcmcua/freecad/fcmcua/: __init__.py  actuator_params.fcmc  actuator_widgets.py  axis_params.fcmc  axis_widgets.py  connection_params.fcmc  fcmcua.ini  fcmcua_actuator_logic.py  fcmcua_actuators_cmd.py  fcmcua_axes_cmd.py  fcmcua_cmd.py  fcmcua_settings.py  init_gui.py  old_opc_cad_updater.py  opc_cad_updater.py  opc_client.py
freecad.fcmcua/freecad/fcmcua/dependencies/asyncua-1.0.1.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
freecad/fcmcua/: __init__.py  actuator_params.fcmc  axis_params.fcmc  axis_widgets.py  fcmcua.ini  fcmcua_actuators_cmd.py  fcmcua_settings.py
