<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>FCMCUA Motion Control Workbench</name>
  <description>Link a motion controller to a FreeCAD assembly using OPC UA</description>
  <version>1.0.0</version>
  <date>2023-01-16</date>
  <maintainer email="heissgetraenk@gmx.de">heissgetraenk</maintainer>
  <license file="LICENSE">GPL-3</license>
  <url type="repository" branch="main">https://github.com/heissgetraenk/fcmcua</url>
  <url type="readme">https://github.com/heissgetraenk/fcmcua/blob/main/README.md</url>
  <icon>freecad.fcmcua/freecad/fcmcua/resources/fcmcua_wb.svg</icon>

  <content>
    <workbench>
      <classname>Fcmcua</classname>
      <subdirectory>./</subdirectory>
      <!-- Python package dependencies-->
      <depend>asyncua</depend>
    </workbench>
  </content>

</package>
